[package]
name = "graphcast-sdk"
version = "0.2.0"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description="SDK to build Graphcast Radios"
license="Apache-2.0"
repository="https://github.com/graphops/graphcast-sdk"
keywords=["graphprotocol", "gossip-network", "sdk", "waku", "p2p"]
categories=["network-programming", "web-programming::http-client"]

[dependencies]
waku = { package = "waku-bindings", version= "0.1.0-rc.4" }
slack-morphism = { version = "1.10", features = ["hyper", "axum"] }
prost = "0.11"
once_cell = "1.17"
chrono = "0.4"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["full"]}
anyhow = "1.0.71"
graphql_client = "0.12.0"
serde_derive = "1.0.163"
reqwest = {version = "0.11.17", features = ["json"]}
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
clap = { version = "3.2.25", features = ["derive", "env"] }
toml = "0.7.3"
partial_application = "0.2.1"
prometheus-http-query = "0.6.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
lazy_static = "1.4.0"
thiserror = "1.0.40"
secp256k1 = "0.26.0"
data-encoding = "2.3.3"
url = "2.3.1"
rsb_derive = "0.5.1"
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi", "fmt", "std"]}
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]

[[example]]
name = "ping-pong"
path = "examples/ping-pong/src/main.rs"
crate-type = ["bin"]

[[bin]]
name = "rect"
path = "src/tree_to_txt.rs"
