[package]
name = "waku"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.13"
hex = "0.4"
multiaddr = "0.15"
once_cell = "1.15"
rand = "0.8"
secp256k1 = { version = "0.24", features = ["rand", "recovery", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.3"
url = "2.3"
waku-sys = { path = "../waku-sys" }
