[package]
name = "graphcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waku = { path = "../../waku-bindings" }
prost = "0.11"
once_cell = "1.15"
chrono = "0.4"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = {version = "1.1.1", features = ["full"]}
anyhow = "1.0.39"
graphql_client = "0.9.0"
serde_derive = "1.0.114"
reqwest = {version = "0.11.0", features = ["json"]}
ethers = "1.0.0"
ethers-contract = "1.0.0"
ethers-core = "1.0.0"
ethers-derive-eip712 = "1.0.0"
colored = "2.0.0"
partial_application = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
